--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/pg-adapter": "^1.1.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.14.0",
+    "@vercel/postgres": "^0.8.0",
     "ahooks": "^3.7.11",
+    "crypto-js": "^4.2.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
