--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "@ant-design/nextjs-registry": "^1.0.0",
     "@auth/pg-adapter": "^1.1.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.14.0",
+    "@vercel/blob": "^0.23.2",
     "@vercel/postgres": "^0.8.0",
     "ahooks": "^3.7.11",
+    "antd": "^5.17.2",
+    "antd-img-crop": "^4.22.0",
     "crypto-js": "^4.2.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.11",
+    "swr": "^2.2.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
