--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,20 @@
 {
     "headers": [
         {
-            "source": "/(?!api).*",
+            "source": "/(.*)",
             "headers": [
                 {
                     "key": "Cache-Control",
                     "value": "public, s-maxage=86400, max-age=86400"
+                }
+            ]
+        },
+        {
+            "source": "/api/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "s-maxage=60, stale-while-revalidate=30"
                 }
             ]
         }
