fix(vercel.json): auth no cache

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,15 @@
                     "value": "s-maxage=60, stale-while-revalidate=30"
                 }
             ]
+        },
+        {
+            "source": "/api/auth/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "no-store"
+                }
+            ]
         }
     ]
 }
